--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,7 +7,9 @@
     "start": "webpack-dev-server --config webpack.config.js",
     "build": "rimraf ./dist && webpack --config webpack.config.production.js",
     "preview": "pushstate-server ./dist 1234",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [
     "React",
@@ -42,7 +44,8 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.7",
     "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.4.5",
+    "@kadira/storybook": "^2.21.0"
   },
   "dependencies": {
     "axios": "^0.16.2",
@@ -51,6 +54,7 @@
     "css-mqpacker": "^6.0.1",
     "faker": "^4.1.0",
     "lazy-route": "^1.0.7",
+    "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.13",
     "material-ui-icons": "^1.0.0-beta.14",
     "mobx": "^3.2.2",
@@ -61,6 +65,7 @@
     "postcss-cssnext": "^3.0.2",
     "pushstate-server": "^3.0.1",
     "react": "^15.3.2",
+    "react-d3-components": "^0.7.0",
     "react-dom": "^15.3.2",
     "react-router-dom": "latest",
     "react-router-modal": "^1.1.13",
