--- a/webapp/package.json
+++ b/webapp/package.json
@@ -73,6 +73,7 @@
     "postcss-cssnext": "^3.0.2",
     "pushstate-server": "^3.0.1",
     "react": "^15.3.2",
+    "react-csv-creator": "^1.0.8",
     "react-d3-components": "^0.7.0",
     "react-dom": "^15.3.2",
     "react-easy-chart": "^0.3.0",
