--- a/webapp/package.json
+++ b/webapp/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "can-param": "^1.0.1",
+    "chart.js": "^1.1.1",
     "computed-async-mobx": "^3.0.0",
     "css-declaration-sorter": "^2.0.0",
     "css-mqpacker": "^6.0.1",
@@ -73,14 +74,19 @@
     "postcss-cssnext": "^3.0.2",
     "pushstate-server": "^3.0.1",
     "react": "^15.3.2",
+    "react-chartjs": "^0.8.0",
     "react-csv-creator": "^1.0.8",
     "react-d3-components": "^0.7.0",
     "react-dom": "^15.3.2",
     "react-easy-chart": "^0.3.0",
     "react-faux-dom": "^4.0.5",
+    "react-masonry-css": "^1.0.10",
+    "react-preload": "^0.5.1",
+    "react-preloader-icon": "^0.1.0",
     "react-responsive-carousel": "^3.1.28",
     "react-router-dom": "latest",
     "react-router-modal": "^1.1.13",
+    "react-slick": "^0.16.0",
     "rfx-core": "^1.5.3",
     "whatwg-fetch": "^2.0.3"
   },
