--- a/webapp/package.json
+++ b/webapp/package.json
@@ -23,75 +23,126 @@
   ],
   "author": "Martin Haagensli",
   "license": "ISC",
-  "devDependencies": {
-    "@storybook/addon-actions": "^3.2.12",
-    "@storybook/addon-links": "^3.2.12",
-    "@storybook/react": "^3.2.12",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-async-to-generator": "^6.16.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
-    "html-webpack-plugin": "^2.22.0",
-    "image-webpack-loader": "^3.4.2",
-    "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
-    "react-hot-loader": "next",
-    "resolve-url-loader": "^2.1.0",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.7",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "^2.4.5"
-  },
-  "dependencies": {
-    "axios": "^0.16.2",
-    "can-param": "^1.0.1",
-    "chart.js": "^1.1.1",
-    "computed-async-mobx": "^3.0.0",
-    "css-declaration-sorter": "^2.0.0",
-    "css-mqpacker": "^6.0.1",
-    "d3-array": "^1.2.1",
-    "d3-scale": "^1.0.6",
-    "d3-time-format": "^2.1.0",
-    "faker": "^4.1.0",
-    "lazy-route": "^1.0.7",
-    "lodash": "^4.17.4",
-    "material-ui": "^1.0.0-beta.13",
-    "material-ui-icons": "^1.0.0-beta.14",
-    "mobx": "^3.2.2",
-    "mobx-react": "^4.2.2",
-    "mobx-react-devtools": "^4.2.6",
-    "moment": "^2.18.1",
-    "package": "^1.0.1",
-    "postcss-cssnext": "^3.0.2",
-    "pushstate-server": "^3.0.1",
-    "react": "^15.3.2",
-    "react-chartjs": "^0.8.0",
-    "react-csv-creator": "^1.0.8",
-    "react-d3-components": "^0.7.0",
-    "react-dom": "^15.3.2",
-    "react-easy-chart": "^0.3.0",
-    "react-faux-dom": "^4.0.5",
-    "react-masonry-css": "^1.0.10",
-    "react-preload": "^0.5.1",
-    "react-preloader-icon": "^0.1.0",
-    "react-responsive-carousel": "^3.1.28",
-    "react-router-dom": "latest",
-    "react-router-modal": "^1.1.13",
-    "react-slick": "^0.16.0",
-    "rfx-core": "^1.5.3",
-    "whatwg-fetch": "^2.0.3"
-  },
   "repository": {
     "url": "git@github.com:mhaagens/react-mobx-react-router4-boilerplate.git",
     "type": "git"
+  },
+  "dependencies": {
+    "@material-ui/core": "4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/pickers": "4.0.0-alpha.5",
+    "@material-ui/styles": "4.11.3",
+    "@material-ui/system": "4.11.3",
+    "accesscontrol": "^2.2.1",
+    "axios": "^0.21.1",
+    "can-param": "^1.1.2",
+    "chart.js": "^3.1.1",
+    "css-declaration-sorter": "^6.0.2",
+    "is_js": "^0.9.0",
+    "lodash": "^4.17.15",
+    "lorem-ipsum": "^2.0.3",
+    "material-ui-image": "^3.2.3",
+    "material-ui-nested-menu-item": "^1.0.2",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
+    "moment": "^2.24.0",
+    "numbro": "^2.3.1",
+    "polished": "^4.1.0",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.13.1",
+    "react": "^16.13.1",
+    "react-animated-list": "^0.1.4",
+    "react-avatar": "^3.9.7",
+    "react-chartjs": "^1.2.0",
+    "react-codemirror2": "^7.2.1",
+    "react-contenteditable": "^3.3.5",
+    "react-csv-creator": "^1.1.0",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
+    "react-dom": "^16.13.1",
+    "react-easy-chart": "^1.0.0",
+    "react-feather": "^2.0.8",
+    "react-flip-move": "^3.0.4",
+    "react-gradient-scroll-indicator": "^1.0.1",
+    "react-helmet": "^6.1.0",
+    "react-infinite-scroll-component": "^5.0.5",
+    "react-jss": "^10.3.0",
+    "react-masonry-css": "^1.0.16",
+    "react-outside-click-handler": "^1.3.0",
+    "react-preload": "^0.6.0",
+    "react-preloader-icon": "^1.0.0",
+    "react-router-dom": "^5.1.2",
+    "react-selectable-fast": "^3.4.0",
+    "react-slick": "^0.28.1",
+    "react-sortable-hoc": "git://github.com/zhrkian/react-sortable-hoc.git#group",
+    "react-sticky": "^6.0.3",
+    "react-virtualized": "^9.21.2",
+    "styled-components": "^5.1.1",
+    "tiny-flag-react": "^2.0.2",
+    "universal-cookie": "^4.0.3"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-proposal-function-bind": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/preset-react": "^7.9.4",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.1",
+    "@storybook/addon-actions": "^5.3.17",
+    "@storybook/addon-links": "^5.3.17",
+    "@storybook/addons": "^5.3.17",
+    "@storybook/react": "^5.3.17",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-plugin-styled-components": "^1.10.7",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^3.6.0",
+    "css-mqpacker": "^7.0.0",
+    "html-loader": "^1.1.0",
+    "html-webpack-plugin": "^4.0.4",
+    "mini-css-extract-plugin": "^0.9.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-loader": "^5.2.0",
+    "react-hot-loader": "^4.12.21",
+    "react-refresh": "^0.8.3",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.11",
+    "sass-loader": "^10.1.1",
+    "storybook-router": "^0.3.4",
+    "style-loader": "^1.2.1",
+    "svg-url-loader": "^6.0.0",
+    "webpack": "^4.42.1",
+    "webpack-bundle-analyzer": "^3.8.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "./enzyme.config.js"
+    ],
+    "verbose": true,
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest",
+      "^.+\\.js$": "babel-jest",
+      "^.+\\.svg$": "jest-svg-transformer"
+    },
+    "globals": {
+      "NODE_ENV": "test"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "src/components",
+      "src/Routes",
+      "src/stores",
+      "src/utils"
+    ]
   }
 }
